// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtering URL params > should not be empty if active filters are present 1`] = `
{
  "status": "ACTIVE",
}
`;

exports[`Filtering URL params > should not be empty if active filters are present 2`] = `"status=ACTIVE"`;

exports[`Filtering URL params should not be empty if active filters are present 1`] = `
Object {
  "status": "ACTIVE",
}
`;

exports[`Filtering URL params should not be empty if active filters are present 2`] = `"status=ACTIVE"`;
